force-app/main/default/objects/Transport__c/Transport__c.object-meta.xml
<CustomObject>
    <description>Transport Master</description>
    <label>Transport</label>
    <nameField>
        <label>Airport/BVC Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>