force-app/main/default/objects/Transport__c/fields/Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>Airport_Name__c</fullName>
    <label>Airport Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>