force-app/main/default/objects/Transport__c/fields/Branch_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Master_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Master Name</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Transports (Branch Master Name)</relationshipLabel>
    <relationshipName>Transports1</relationshipName>
    <type>Lookup</type>
</CustomField>