force-app/main/default/objects/Transport__c/fields/Current_BVC_Hub__c.field-meta.xml
<CustomField>
    <fullName>Current_BVC_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current BVC Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Transports</relationshipLabel>
    <relationshipName>Transports</relationshipName>
    <type>Lookup</type>
</CustomField>