force-app/main/default/objects/Transport__c/fields/Fabricated_By__c.field-meta.xml
<CustomField>
    <fullName>Fabricated_By__c</fullName>
    <label>Fabricated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>