force-app/main/default/objects/Transport__c/fields/Fabricated_On__c.field-meta.xml
<CustomField>
    <fullName>Fabricated_On__c</fullName>
    <label>Fabricated On</label>
    <type>Date</type>
</CustomField>