force-app/main/default/objects/Transport__c/fields/Is_Dry_Port__c.field-meta.xml
<CustomField>
    <fullName>Is_Dry_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dry Port</label>
    <type>Checkbox</type>
</CustomField>