force-app/main/default/objects/Transport__c/fields/Is_Ice_Gate_Port__c.field-meta.xml
<CustomField>
    <fullName>Is_Ice_Gate_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ice Gate Port</label>
    <type>Checkbox</type>
</CustomField>