force-app/main/default/objects/Transport__c/fields/Pin_Code_Master__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pin Code Master</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Transports</relationshipLabel>
    <relationshipName>Transports</relationshipName>
    <type>Lookup</type>
</CustomField>