force-app/main/default/objects/Transport__c/fields/Purchase_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Dealer__c</fullName>
    <label>Purchase Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>