force-app/main/default/objects/Transport__c/fields/Shipments__c.field-meta.xml
<CustomField>
    <fullName>Shipments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Transports</relationshipLabel>
    <relationshipName>Transports</relationshipName>
    <type>Lookup</type>
</CustomField>