force-app/main/default/objects/Transport__c/fields/Time_Since_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Purchase__c</fullName>
    <formula>TODAY() - Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Purchase (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>