force-app/main/default/objects/Transport__c/recordTypes/Airport.recordType-meta.xml
<RecordType>
    <fullName>Airport</fullName>
    <active>true</active>
    <label>Airport</label>
</RecordType>