force-app/main/default/objects/Transport__c/recordTypes/BVC_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>BVC_Vehicle</fullName>
    <active>true</active>
    <label>BVC Vehicle</label>
</RecordType>