force-app/main/default/objects/Transport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_BVC_Hub__c</columns>
    <columns>Airport_Name__c</columns>
    <columns>Airport_Code__c</columns>
    <columns>Model__c</columns>
    <columns>Registration_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Vehicle_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>